fixing horizontal scrollbar @ <= 480

--- a/src/scss/includes/gallery.scss
+++ b/src/scss/includes/gallery.scss
@@ -23,7 +23,7 @@
       overflow: hidden;
       @media (max-width: 480px) {
          margin-left: rem(-5);
-         margin-right: rem(-15);
+         margin-right: rem(-10);
       }
       @media (max-width: 870px) {
       }
@@ -127,7 +127,7 @@
    // width: 480px;
    // height: 532px;
    // padding-bottom: pc(532, 480);
-   outline: 4px solid lightblue;
+   // outline: 4px solid lightblue;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
